# NeoDemosRust

./: .gitignore  README.md
borrow/: Cargo.toml
borrow/src/: manual_drop.rs  mem_relocate.rs  multiple_mut_ref.rs  ownership_reference.rs  reborrow.rs  reborrow1.rs  vec_grow.rs
hello-rust/: Cargo.toml
hello-rust/src/: main.rs
hello-rust/src/basic/: func_as_param.rs  pointer.rs  return_val.rs  where_is_pi.rs
hello-rust/src/control/: fib.rs
hello-rust/src/tests/: hello.rs
hello-rust/src/type/: enum.rs  events.rs  shapes.rs  string.rs  struts.rs
httpie/: Cargo.toml
httpie/src/: httpie.rs
lifetime/: Cargo.toml
lifetime/src/: auto_lifetime.rs  lifetime.rs  lifetime_mono.rs  lifetime_non_lexical.rs  strtok.rs
memory/: Cargo.toml
memory/src/: alignment.rs  size.rs
multi_owner/: Cargo.toml
multi_owner/src/: dag_mut.rs  spawn.rs  weak_reference.rs
ownership/: Cargo.toml
ownership/src/: check_copy.rs  copy_drop.rs
queryer/: Cargo.toml
queryer/data-viewer/: README.md  package.json
queryer/examples/: covid.rs
queryer/queryer-js/: Cargo.toml  README.md
queryer/queryer-js/src/: lib.rs
queryer/queryer-py/: Cargo.toml  README.md
queryer/queryer/examples/: covid.rs
queryer/queryer/src/: lib.rs  ndialect.rs  nfetcher.rs  nloader.rs
queryer/src/: nconvert.rs  ndataset.rs  ndialect.rs
scrape_url/: Cargo.toml
scrape_url/src/: main.rs  scrape_url.rs
thumbor/: Cargo.toml
thumbor/misc/: build.rs
thumbor/src/: server.rs
thumbor/src/engine/: photon.rs
thumbor/src/pb/: abi.rs  mod.rs
type_system/: Cargo.toml
type_system/src/: id.rs
