[package]
name = "lifetime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lifetime"
path = "src/lifetime.rs"

[[bin]]
name = "auto_lifetime"
path = "src/auto_lifetime.rs"

[[bin]]
name = "strtok"
path = "src/strtok.rs"

[[bin]]
name = "lifetime_mono"
path = "src/lifetime_mono.rs"

[[bin]]
name = "lifetime_non_lexical"
path = "src/lifetime_non_lexical.rs"

[dependencies]
